--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "http": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.20.1",
     "morgan": "^1.10.1",
     "socket.io": "^4.8.1"
